--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
-    "functions": {
-        "api/*.js": {
-            "runtime": "nodejs18.x"
-        }
+  "functions": {
+    "api/*.js": {
+      "runtime": "nodejs18.x"
     }
+  },
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/$1" }
+  ]
 }
