--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,17 @@
 {
-  "functions": {
-    "api/*.js": {
-      "runtime": "nodejs18.x"
+  "version": 2,
+  "builds": [
+    {
+      "src": "submit_form.php",
+      "use": "@vercel/php"
+    },
+    {
+      "src": "api/getClassDates.js",
+      "use": "@vercel/node"
     }
-  },
-  "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/$1" }
+  ],
+  "routes": [
+    { "src": "/submit_form.php", "dest": "submit_form.php" },
+    { "src": "/api/getClassDates", "dest": "api/getClassDates.js" }
   ]
 }
