--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,7 @@
 {
     "version": 2,
-    "builds": [
-      {
-        "src": "/api/getClassDates.js",
-        "use": "@vercel/node"
-      }
-    ],
     "routes": [
-      { "src": "/api/getClassDates", "dest": "/api/getClassDates.js" }
+      { "src": "/api/(.*)", "dest": "/api/$1" }
     ]
   }
   
