--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,9 @@
 {
-  "version": 2
-}
+    "version": 2,
+    "functions": {
+      "api/*.php": {
+        "runtime": "vercel-php@0.5.1"
+      }
+    }
+  }
+  
